--- a/templates/admin.html
+++ b/templates/admin.html
@@ -15,7 +15,7 @@
 
 <!-- Header -->
     <header class="w3-container w3-red w3-center" style="padding:50px 16px">
-      <h1 class="w3-margin w3-jumbo">Gerenciamento</h1>
+      <h1 class="w3-margin w3-jumbo">App Próximo</h1>
     </header>
 
     <body>
@@ -24,19 +24,40 @@
             <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="hello()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
             <a href="/" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
             <a href="/login" class="w3-bar-item w3-button w3-padding-large w3-white">Login</a>
-            <a href="/listar_pedidos" class="w3-bar-item w3-button w3-padding-large w3-white">Ver Pedidos</a>          </div>
+            <a href="/listar_pedidos" class="w3-bar-item w3-button w3-padding-large w3-white">Ver Pedidos</a>
+          </div>
          </div>
 
 <!-- Corpo -->
 
-        <div  class="w3-row-padding w3-padding-64 w3-container">
+    <div class="w3-row-padding w3-padding-64 w3-container">
           <div class="w3-content">
-            <div class="w3-twothird" style="text-align: center">
-                <a href="{{url_for('cadastrarRestaurante')}}">Cadastrar restaurante</a> <br> 
-                <a href="{{url_for('cadastrarRefeicao')}}">Cadastrar refeição</a> <br>
-                <a href="{{url_for('cadastrarBebida')}}">Cadastrar bebida</a> <br> 
-            </div>
+            <div class="w3-twothird">
+              <h1>Catálogo de Restaurantes</h1>
+              <h5 class="w3-padding-32">
+              		<div class="restaurantsList">
+        			<ul class="list">
+        				{%for restaurante in restaurantes%}
+        					<li><span>{{restaurante.nome}}</span>
+        					<a href="{{url_for('deletar', restaurante_id=restaurante.id)}}">Deletar</a>
+        					<a href="{{url_for('editar', restaurante_id=restaurante.id)}}">Editar</a><hr>
+        					</li>
+        				{%endfor%}
+        			</ul>
+        		</div>
+              </h5>
+        <h5 class="w3-padding-32">
+            <ul class="list">
+                <li><a href="{{url_for('cadastrarRestaurante')}}">Cadastrar restaurante</a> <hr></li>
+                <li><a href="{{url_for('cadastrarRefeicao')}}">Cadastrar refeição</a> <hr></li>
+                <li><a href="{{url_for('cadastrarBebida')}}">Cadastrar bebida</a></li>
+            </ul>
+        </h5>
           </div>
+            <div class="w3-third w3-center">
+              <i class="fa fa-coffee w3-padding-64 w3-text-red w3-margin-right"></i>
+            </div>
         </div>
+    </div>
     </body>
 </html>
